--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,118 @@
+/* General */
 * {
+    padding: 0;
+    margin: 0;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
-#nome {
-    color: darkblue;
+/* Variables */
+:root {
+    --main-color: #54B689;
+    --main-text-color: #FFF;
+    --border-color: #999;
+    --bio-bg-color: #1E2A3A;
+    --bio-border-color: #293544;
+    --about-bg-color: #111821;
+}
+
+/* Class */
+.highlight {
+    color: var(--main-color);
+}
+
+/* Id */
+#container {
+    color: var(--main-text-color);
+    display: flex;
+    /* 1 linha com 2 colunas */
+    flex-direction: row;
+    
+}
+
+#bio-container{
+    flex: 1 1 20%;
+    min-height: 100vh;
+    background-color: var(--bio-bg-color);
+    text-align: center;
+    padding: 30px 12px;
+    border-right: 5px solid var(--bio-border-color);
+}
+
+#about-container{
+    flex: 1 1 80%;
+    height: 100%;
+    background-color: var(--about-bg-color);
+    padding: 50px;
+}
+
+#bio-container h2{
+    margin-bottom: 25px;
+}
+
+#bio-container p{
+    margin-bottom: 20px;
+}
+
+#bio-container #profession{
+    font-weight: bold;
+}
+
+#bio-container #welcome-text{
+    font-weight: bold;
+}
+
+#bio-image{
+    width: 175px;
+    height: 175px;
+    border-radius: 50%;
+    margin-bottom: 25px;
+}
+
+#social-container{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    border-bottom: 1px solid var(--border-color);
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+}
+
+#social-container li{
+    flex: 1 1 0;
+    max-width: 60px;
+}
+
+#social-container li a{
+    color: var(--main-color);
+    font-size: 30px;
+}
+
+#hammerImg{
+    color: var(--main-color);
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+#email-container{
+    display: flex;
+    justify-content: center;
+}
+
+#email-container ion-icon,
+#email-container a{
+    flex: 1 1 0;
+}
+
+#email-container a{
+    color: var(--main-text-color);
+    text-decoration: none;
+    max-width: 225px;
+}
+
+#email-container ion-icon{
+    color: var(--main-color);
+    font-size: 20px;
+    margin-right: -10px;
+    max-width: 20px;
 }
