--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     margin-bottom: 10px;
 }
 
-.skills-box{
+.skills-box {
     flex: 1 1 33%;
     max-width: 33%;
     margin-bottom: 35px;
@@ -40,8 +40,8 @@
     border-left: 5px solid var(--main-color);
 }
 
-.skills-box i{
-    font-size: 60px;
+.skills-box i {
+    font-size: 55px;
     margin-right: 10px;
 }
 
@@ -65,7 +65,7 @@
 
 #about-container {
     flex: 1 1 80%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--about-bg-color);
     padding: 50px;
 }
@@ -155,10 +155,10 @@
 }
 
 #btn-projects {
-    font-size: 16px;
     font-weight: bold;
+    font-size: 16px;
     color: var(--main-text-color);
-    background-color: rgb(44, 44, 40);
+    background-color: transparent;
     border: 2px solid var(--main-color);
     border-radius: 5px;
     text-decoration: none;
@@ -176,28 +176,76 @@
 
 }
 
-#btn-projects ion-icon{
+#btn-projects ion-icon {
     font-size: 20px;
     max-width: 20px;
 }
 
 /* Passar o mouse no botão ver meu projetos */
-#btn-projects:hover{
-    background-color: transparent;
+#btn-projects:hover {
+    background-color: var(--main-color);
 }
 
-#skills-section-title{
+#skills-section-title {
     border-top: 1px solid var(--border-color);
     padding-top: 20px;
     margin-bottom: 20px;
     font-size: 32px;
 }
 
-#skills-container{
+#skills-container {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 25px;  
+    margin-top: 25px;
 }
 
+/*  Mobile */
+@media(max-width: 450px) {
 
+    #container {
+        flex-direction: column;
+    }
 
+    #bio-container {
+        min-height: auto;
+        border-right: none;
+        border-bottom: 5px solid var(--bio-border-color);
+    }
+
+    #bio-container h2 {
+        display: none;
+    }
+
+    #bio-container p {
+        max-width: 60%;
+        margin: 10px auto;
+    }
+
+    #about-container {
+        text-align: center;
+        padding: 30px;
+    }
+
+    #about-container .description{
+        margin: 10px auto;
+        max-width: 100%;
+        line-height: 26px;
+    }
+
+    #btn-projects{
+        margin: 20px auto;
+    }
+
+    .skills-box {
+        flex: 1 1 100%;
+        max-width: 100%;
+        margin-bottom: 40px;
+        text-align: left;
+    }
+
+    .skills-box i{
+        font-size: 60px;
+    }
+
+    
+}
