--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@
 }
 
 /* Id */
+#scrum{
+    border-radius: 5px;
+    width: 80px;
+    height: 60px;
+    margin-right: 10px;
+}
+
 #container {
     color: var(--main-text-color);
     display: flex;
