--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     --border-color: #999;
     --bio-bg-color: #1E2A3A;
     --bio-border-color: #293544;
-    --about-bg-color: #132b4d;
+    --about-bg-color: #13386b;
 }
 
 /* Class */
@@ -48,9 +48,15 @@
 /* img */
 .logo{
     border-radius: 2px;
-    width: 60px;
+    width: 50px;
     height: 50px;
+    object-fit: contain;
     margin-right: 10px;
+}
+
+.scrum{
+    padding: 0 2px;
+    background-color: rgb(242, 246, 255);
 }
 
 #container {
